# kisscm

./: README.md  prac1.md
dz1/: config.yaml  emulator.py  readme.md  startup.txt  tests.py
dz2/: dependency_visualizer.py  output.mermaid  readme.md  tests.py
dz3/: CMakeLists.txt  Translator.cpp  main.cpp  out.txt  readme.md  test.json  tests.cpp
dz3/files/: test.json
dz3/translator/: Translator.h
dz4/: Assemble.h  CMakeLists.txt  Interpret.cpp  Interpret.h  assembler.cpp  input.txt  interpreter.cpp  log.csv  readme.md  tests.cpp
dz4/assebmle/: Assemble.cpp
dz4/assemble/: Assemble.cpp  Assemble.h
dz4/files/: input.asm  input.txt  log.csv  result.csv
dz4/src/: interpreter.cpp
dz4/tests/: tests.cpp
pracs/: prac2.md  prac3.md  prac4.md
